# ebe

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  arg_parser.cpp  arg_parser.hpp  compile_flex_bison.sh  compiler.cpp  compiler.hpp  ebe  ebe.cpp  ebe.hpp  engine.cpp  engine.hpp  engine_jenn.cpp  engine_jenn.hpp  gp.cpp  gp.hpp  install.sh  instruction.cpp  instruction.hpp  interpreter.cpp  interpreter.hpp  ir.cpp  ir.hpp  logging.cpp  logging.hpp  preprocessor.cpp  preprocessor.hpp  readme.md  rng.cpp  rng.hpp  scanner.cpp  scanner.hpp  utils.cpp  utils.hpp
analytics/: plot.py
backend/: compiler.cpp  compiler.hpp  instruction.cpp  instruction.hpp  interpreter.cpp  interpreter.hpp  symbol_table.cpp  symbol_table.hpp
docs/: Doxyfile  readme.md
docs/frontend/: ebel.grammar  parser_ebel.grammar.output  parser_ebel.output  parser_text.grammar.output  parser_text.output
engine/: engine.cpp  engine.hpp  engine_jenn.cpp  engine_jenn.hpp  engine_miRANDa.cpp  engine_miRANDa.hpp  engine_taylor.cpp  engine_taylor.hpp  fitness.cpp  fitness.hpp
examples/: bigger_expr.ebel  bigger_expr.output  ex1.in  ex2.ebel  ex2.output  exUNICODE.ebel  exUNICODE.in  exUNICODE.output  exUTF8.ebel  exUTF8.in  exUTF8.output  expr.ebel  expr.in  expr.output  incorrectCode.ebel  numbers.in  passes.ebel  pragmas.ebel  scan_test.in  test.ebel
frontend/: lexer_ebel.cpp  lexer_ebel.hpp  lexer_text.cpp  lexer_text.hpp  location.hh  parser_ebel.cpp  parser_ebel.hpp  parser_text.cpp  parser_text.hpp  pragmas.cpp  pragmas.hpp  preprocessor.cpp  preprocessor.hpp  scanner.cpp  scanner.hpp  scanner_ebel.cpp  scanner_ebel.hpp  scanner_text.cpp  scanner_text.hpp
frontend/grammars/: lexer_ebel.ll  lexer_text.ll  parser_ebel.yy  parser_text.yy  text_lexer.ll  text_parser.yy
gp/: fitness.cpp  gp.cpp  gp.hpp
inputs/: abc.in  corr.ebel  ex1.in  ex2.ebel  ex2.in  numbers.ebel  numbers.in  scan_test.in  test.ebel
midend/: expression.cpp  expression.hpp  ir.cpp  ir.hpp  tree.cpp  tree.hpp
tests/: test_argparse.cpp  test_interpreter.cpp  test_pragmas.cpp  test_scanner.cpp  test_utils.cpp
utils/: arg_parser.cpp  arg_parser.hpp  exceptions.cpp  exceptions.hpp  logging.cpp  logging.hpp  rng.cpp  rng.hpp  utils.cpp  utils.hpp
